# rustbeam

./: .gitignore  .npmrc  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TESTING.md  build.sh  index-react.html  index.html  nixpacks.toml  package-lock.json  package.json  server.cjs  server.js  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: LRFD_digest.md  ROADMAP-FOCUSED.md  SCENE_GEOMETRY.md
src/: App.css  App.tsx  AppPro.css  AppPro.tsx  lib.rs  main-react.tsx  main-refactored.ts
src/data/: beam_catalog.rs  mod.rs
src/geometry/: annotationConstraints.ts
src/scenes/: MainScene.ts  MainSceneRefactored.ts
src/store/: index.ts  types.ts
src/test/: setup.ts
src/types/: index.ts
src/ui/: SetupMenu.css  SetupMenu.tsx
src/utils/: fileIO.ts
src/xml/: deserializer.ts  serializer.ts
ui-mockup/: BRIDGE_GEOMETRY.md  README.md  components.css  geometry-config.js  index.html  setup-v2.css  setup-v2.html  setup-v2.js  setup.html  setup.js  test-canvas.html  visualbeam-v2.css  visualbeam-v2.html  visualbeam-v2.js  visualbeam-v3.css  visualbeam-v3.html  visualbeam-v3.js  visualbeam-v4.css  visualbeam-v4.html  visualbeam-v4.js  visualbeam.html  visualbeam.js
ui-mockup/archive/: app.js  setup.css  styles.css  visualbeam-v2.css  visualbeam.css
visualbeam/: .dockerignore  .env.example  .eslintignore  .gitignore  Dockerfile  index.html  nixpacks.toml  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts
visualbeam-src/: main.ts
visualbeam-src/data/: beamCatalog.ts
visualbeam-src/scenes/: MainScene.ts
(+37 files in other folders)
