[package]
name = "rustbeam"
version = "0.1.0"
edition = "2021"
authors = ["Terragon Labs"]
description = "Rust-based structural beam inspection system with visual excellence"
license = "MIT"
repository = "https://github.com/greasegum/rustbeam"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "rustbeam"
path = "src/lib.rs"